update .js file

--- a/index.html
+++ b/index.html
@@ -27,11 +27,20 @@
       <h1 class="display-3">Work Day Scheduler</h1>
       <p class="lead">A simple calendar app for scheduling your work day</p>
       <p id="currentDay" class="lead"></p>
+      <p id="clock" class='lead'></p>
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
-
-
+      <!--<ul>
+        <li class="time-block">
+          <form action="submit">
+            <label for=""></label>
+            <input type="text" name="" id="">
+            <button type="submit"></button>
+          </form>
+        </li>
+      </ul>
+    -->
 
 
 
